# zigbee_air_quality_monitor_firmware

./: .devcontainer.json  CMakeLists.txt  Kconfig  README.md  apply_patches.sh  west.yml
boards/arm/zigbee/: Kconfig  Kconfig.board  Kconfig.defconfig  board.cmake  pre_dt_board.cmake  zigbee-pinctrl.dtsi  zigbee.dts  zigbee.yaml  zigbee_defconfig
boards/arm/zigbee/doc/: index.rst
configuration/xiao_ble/: app.overlay  prj.conf  prj_release.conf
configuration/zigbee/: app.overlay  prj.conf
patches/nrfxlib/: zcl_humidity_tolerance_support.patch
patches/zephyr/: SCD4X_driver.patch  blackmagic_xiao_board_support.patch  ws2812_rgb_led_i2s_support.patch
src/: air_quality_monitor.c  air_quality_monitor.h  main.c  rgb_led.c  rgb_led.h  sensor.c  sensor.h
src/zcl/: zb_zcl_concentration_measurement.h
z2m/: README.md  airQualityMonitor.js
